manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ping-pong-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ping-pong-svc
          servicePort: 6789
