manifests/ping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
  namespace: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: josephshih13/ping-pong
---
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: ping-pong
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 6789
      protocol: TCP
      targetPort: 9936
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ping-pong-ingress
  namespace: ping-pong
spec:
  rules:
  - http:
      paths:
      - path: /pong
        backend:
          serviceName: ping-pong-svc
          servicePort: 6789
      - path: /internal
        backend:
          serviceName: ping-pong-svc
          servicePort: 6789
